--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             margin: 0.9em;
         }
         section {
-            width: 900px;
+            max-width: 900px;
             margin: auto;
         }
 
